--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <p class="lead">우면도서관이 고른 20권의 책으로, 인공지능과 함께하는 새로운 시작을 준비해 보세요.</p>
       <div class="tagline">
         <span class="tag-dot"></span>
-        <span>표지를 클릭하면 책 제목이 자동 복사됩니다. 도서관 통합검색 페이지에 붙여넣기를 하시면 됩니다.</span>
+        <span>표지를 클릭하면 책 제목이 자동 복사되고 도서관 검색 페이지로 이동됩니다. 도서관 통합검색창에 붙여넣기 해주세요.</span>
       </div>
     </header>
 
@@ -286,7 +286,7 @@
         </div>
         <p class="section-desc">
           기술 자체보다 먼저, 세상이 어떻게 바뀌고 있는지 이해하는 시간입니다.
-          인공지능이 불러올 변화와 그 안에서의 ‘인간다움’을 함께 생각해 보는 건 어떨까요?
+          인공지능의 개념과 인공지능이 불러올 변화를 알아볼 수 있습니다.
         </p>
       </div>
 
