--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <script>
     function goLibrary(title){
       navigator.clipboard.writeText(title.trim()).then(() => {
-        alert(`"${title}" 가 복사되었습니다.\n양재도서관 검색창에 붙여넣기 해주세요.`);
+        alert(`"${title}" 가 복사되었습니다.\n도서관 검색창에 붙여넣기 해주세요.`);
       }, () => {
         alert('복사에 실패했어요. 제목을 직접 복사해 주세요.');
       });
